addon/styles/partials/_uni-datepicker.scss
$box-size: 42px;

.ember-power-calendar {
  width: 100%;
  max-width: 294px;

  &-nav {
    margin-bottom: 15px;

    &-control {
      width: 47px;
      height: 35px;
      background: color('dropdown') !important;
      border: 1px solid color('primary', 'divider') !important;
      color: color('dropdown') !important;
      cursor: pointer;
      background-color: color('dropdown');

      button[disabled] {
        background-color: color('buttons');
      }
    }

    &-title {
      @include font("IntervalNextReg");
      font-size: em(19px);
    }
  }

  &-day {
    max-width: $box-size;
    max-height: $box-size;
    cursor: pointer;

    &--focused {
      box-shadow: none !important;
    }
  }

  &-day--current-month {
    background-color: color('buttons') !important;

    &:hover {
      background-color: color('buttons', 'hover') !important;
    }

    &:disabled {
      color: color('buttons', 'disabled-text') !important;

      &:hover {
        background-color: color('buttons') !important;
      }
    }
  }

  &-day--other-month {
    background-color: color('buttons', 'disabled');
  }

  &-day--selected {
    color: color('primary') !important;
  }

  &-day--interactive[disabled] {
    opacity: 1 !important;
  }

  &-week {
    border-top: 1px solid color('primary', 'divider');

    &:first-child {
      border-top: 0;
      @include justify-content-end();

      button {
        border-top: 1px solid color('primary', 'divider');

        &:first-child {
          border-left: 0;
          box-shadow: -1px 0 0 color('primary', 'divider');
        }
      }
    }

    &[data-missing-days="0"]:first-child button:first-child {
      box-shadow: 0 0 0;
      border-left: 1px solid color('primary', 'divider');
    }

    &:last-child {
      @include justify-content-start();

      button {
        border-bottom: 1px solid color('primary', 'divider');
      }
    }
  }

  &-row {
    @include justify-content-center();

    button {
      width: $box-size;
      height: $box-size;
      padding: 0;
      border-right: 1px solid color('primary', 'divider');
      @include font("IntervalNextBook");
      font-size: em(16px);

      &:first-child {
        border-left: 1px solid color('primary', 'divider');
      }
      &:nth-child(8n) {
        border-left: 1px solid color('primary', 'divider');
      }

      &[disabled] {
        background-color: color('buttons', 'disabled');
        text-decoration: line-through;
      }
    }
  }

  &-weekdays {
    margin-bottom: 8px;
  }
}

button.ember-power-calendar-nav-control {
  @include flex();
  @include align-items-center();
  @include justify-content-center();

  svg {
    height: 10px;
  }

  &:focus {
    transform: scale(1);
  }

  &:active {
    transform: scale(0.9);
  }

  &[disabled] {
    border: 0;
    opacity: 0.4;
  }
}

